toggle btc and usd working

--- a/popup.html
+++ b/popup.html
@@ -57,7 +57,7 @@
         </div>
         <div class="radio-item">
         <input type="radio" id="both" name="currency" value="BOTH">
-        <label for="both">Both <span class="currency-symbol">($)&amp;(&#8383;)</span></label>
+        <label for="both">Both <span class="currency-symbol">($ &amp; &#8383;)</span></label>
         </div>
     </div>
     <script src="popup.js"></script>
