--- a/popup.html
+++ b/popup.html
@@ -55,10 +55,10 @@
         <input type="radio" id="btc" name="currency" value="BTC">
         <label for="btc">Bitcoin <span class="currency-symbol">(&#8383;)</span></label>
         </div>
-        <div class="radio-item">
+        <!-- <div class="radio-item">
         <input type="radio" id="both" name="currency" value="BOTH">
         <label for="both">Both <span class="currency-symbol">($ &amp; &#8383;)</span></label>
-        </div>
+        </div> -->
     </div>
     <script src="popup.js"></script>
     </body>
